feat: add autocomplete for hero search

--- a/app/hero-search/hero-search.template.html
+++ b/app/hero-search/hero-search.template.html
@@ -8,8 +8,8 @@
                 Find a Marvel Hero:
             </p>
             <br>
-            <p class="subtitle control">
-                <input class="input is-large is-rounded" type="email" placeholder="4 letters to find results..." />
+            <p class="subtitle">
+                <search></search>
             </p>
         </div>
     </div>
