--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,11 @@
   <script src="lib/angular-sanitize/angular-sanitize.js"></script>
   <script src="lib/angular-auto-complete/angular-auto-complete.js"></script>
   <script src="app.js"></script>
+  <script src="lib/angular-resource/angular-resource.min.js"></script>
+  <script src="services/app.service.js"></script>
+  <script src="hero-search/hero-search.config.js"></script>
   <script src="hero-search/hero-search.module.js"></script>
   <script src="components/Header/header.module.js"></script>
-  <script src="components/Search/search.module.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
