feat: add hero info page

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
   <script src="lib/angular-resource/angular-resource.min.js"></script>
   <script src="services/app.service.js"></script>
   <script src="hero-search/hero-search.module.js"></script>
+  <script src="hero-details/hero-details.module.js"></script>
   <script src="components/Header/header.module.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
